# preswald-frax

./: .gitignore  Dockerfile  README.md  SOLUTION.md  hello.py  preswald.toml  pyproject.toml  requirements.txt
data/: frax_assets.csv  fraxbalancesheet.csv
preswald_project/: preswald.toml
