[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frax-balance-sheet"
version = "0.1.0"
description = "Frax Balance Sheet Analysis"
requires-python = ">=3.8"
dependencies = [
    "preswald",
    "streamlit==1.43.2",
    "pandas==2.2.3",
    "plotly==5.24.1"
]

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3